fix:width of echart is too narrow

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         // 隐藏加载中
         document.getElementById("loading").style.display = "none";
         // 显示app
-        document.getElementById("app").style.display = "block";
+        document.getElementById("app").style.display = "flex";
       }
     </script>
     <script
