--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     }
     .loader {
       /* 相对定位 */
-      position: absolute ;
+      position: absolute;
       width: 100%;
       height: 60px;
       top: 50%;
@@ -135,13 +135,18 @@
         document.getElementById("app").style.display = "flex";
       }
     </script>
-    <script
+    <!-- <script
     async
     onload="onloadCallback()"
     src="https://docs.opencv.org/4.5.3/opencv.js"
     type="text/javascript"
-  ></script>
+  ></script> -->
+    <script
+      async
+      onload="onloadCallback()"
+      src="sr/assets/js/index.js"
+      type="text/javascript"
+    ></script>
     <script type="module" src="/src/main.ts"></script>
-
   </body>
 </html>
