--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <script
       async
       onload="onloadCallback()"
-      src="sr/assets/js/index.js"
+      src="src/assets/js/index.js"
       type="text/javascript"
     ></script>
     <script type="module" src="/src/main.ts"></script>
